# basilikaseos

./: README.md  app.py  checks.py  pyproject.toml  routes.py  schema.sql
templates/: layout.html  main.html  welcome.html
